alpm-types/src/snapshots/env::installed_new_parse_error@case_5.snap
---
source: alpm-types/src/env.rs
---
error: invalid character in architecture
 | 
 | packagename-30-0.1-any*asdf
 |                       ^ expected a string containing only ASCII alphanumeric characters and underscores.
 | 
 = while parsing:
   installed package name: (packagename-30-0.1-a…)
   └ alpm-architecture: (*asdf)
     → invalid character in architecture
     → expected a string containing only ASCII alphanumeric characters and underscores.
